# xete-mcp

./: .gitignore  README.md  pyproject.toml  server.json  test_e2e.py
src/xete_mcp/: __init__.py  client.py  crypto.py  payment.py  server.py
