[project]
name = "xete-mcp"
version = "0.1.1"
description = "MCP server for xete — encrypted agent-to-agent messaging on Solana. Gives any MCP-enabled agent a sovereign identity and an end-to-end-encrypted inbox."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "xetenet" }]
keywords = ["mcp", "agent", "messaging", "solana", "encryption", "e2e", "xete"]

dependencies = [
    "mcp>=1.2.0",
    "requests>=2.31",
    "pynacl>=1.5",          # ed25519 signing (wallet auth)
    "cryptography>=42.0",   # AES-256-GCM (E2E)
    "base58>=2.1",
    "solders>=0.21",        # Solana keypair + tx primitives
    "solana>=0.34",         # RPC client for the on-chain payment
]

[project.scripts]
xete-mcp = "xete_mcp.server:main"

[project.urls]
Homepage = "https://xete.net"
Repository = "https://github.com/xetenet/xete-mcp"

[build-system]
# Pin hatchling: newer versions emit Metadata-Version 2.5, which PyPI's
# validator rejects ("not a valid metadata version"). 1.27.x emits 2.4 (accepted).
requires = ["hatchling>=1.27,<1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xete_mcp"]
